<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.IvoryStore.HomeActivity">

    <TextView
        android:id="@+id/ChooseSignInTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/choose_method_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ChooseEmailSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:text="@string/email_sign_in_button_text" />

    <Button
        android:id="@+id/ChooseGoogleSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:text="@string/google_sign_in_button_text" />

    <Button
        android:id="@+id/ChooseFacebookSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:text="@string/facebook_sign_in_button_text" />

    <Button
        android:id="@+id/ChooseAnonymousSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:text="@string/anonymous_sign_in_button_text" />



</LinearLayout>