<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.IvoryStore.FacebookSignInActivity">

    <TextView
        android:id="@+id/FacebookStatusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:text="@string/status_default"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/FacebookDetailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:text="@string/detail_default"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/facebook_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/FacebookSignInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/FacebookSignOutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/sign_out_button_text" />

    </LinearLayout>


</LinearLayout>